# chip8

./: .clang-complete  .clang-format  .clang_complete  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Doxyfile  Makefile  Makefile.am  README.md  README.org  assembler.c  assembler.h  audio.c  audio.h  chip8.c  chip8.texi  chip8asm.c  configure.ac  instruction.c  instruction.h  interpreter.c  interpreter.h  main.c  meson.build  meson_options.txt  test.c
docs/: Doxyfile.in  Makefile.am  meson.build
games/: README.md
games/chip8/sources/: KALEID.c8  MAZE.c8  PONG2.c8
games/superchip/: KALEID
games/superchip/sources/: KALEID.c8  MAZE.c8
include/: assembler.h  audio.h  disassembler.h  instruction.h  interpreter.h  log.h  memory.h  meson.build  util.h
info/: chip8.texi  meson.build  style.css  version.texi.in
man/: chip8.1  chip8.7  chip8asm.1  chip8disasm.1  meson.build
src/: Makefile.am  assembler.c  audio.c  chip8.c  chip8asm.c  chip8disasm.c  chip8test.c  config.h.in  disassembler.c  instruction.c  instruction.h  interpreter.c  interpreter.h  log.c  memory.c  meson.build  util.c
test/: check-asm.sh  check-disasm-loop.sh  check-disasm.sh  meson.build  numtest.chip8asm  pathological.disasm.c8
test/check-disasm/: db.c8  db.disasm.c8  pathological.c8
tests/: fonttest.chip8asm  spritetest.chip8asm
